# onyx-send2boox

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ZH.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
src/send2boox/: __init__.py  api.py  cli.py  client.py  config.py  exceptions.py  playwright_debug.py  playwright_session.py
tests/: test_api.py  test_cli.py  test_client.py  test_config.py  test_playwright_debug.py  test_playwright_session.py
